# Ai-Assistant-Pc-Controll

./: .env.example  .gitignore  .gitmodules  .replit  DOCUMENTATION.md  FUTURE_WORK.md  Not working.txt  OLLAMA_INTEGRATION.md  README.md  README_AI_AGENT.md  README_OLD.md  README_PYTHON.md  ROADMAP.md  SETUP_GUIDE.md  TESTING.md  TEST_WEB_GUI.md  Wolf_ai_agent.py  Wolf_desktop_app.py  Wolf_pc_control.py  ai_agent.py  app.py  backend_api.py  cleanup.py  config.py  debug_grimoire.py  demo.py  demo_ai_agent.py  demo_programming.py  index.html  jaris_ai_agent.py  jaris_ai_assistant.py  jaris_desktop_app.py  jaris_pc_control.py  jaris_web_gui.py  main.js  main.py  mic_test.py  ollama_client.py  omni_server.py  package-lock.json  (+34 more)
Ai App/: ai_enhancements.py  app.py  command_history.py  database.py  index.html  main.js  ml_command_processor.py  ollama_client.py  pc_controller.py  renderer.js  screen_reader.py  styles.css  system_controls.py  test.txt  test_ai_system_controls.py  test_ml_command_processor.py  test_pc_controller.py  visual_feedback.py  voice_backend.py  voice_backend.py.bak  wake_word.py  websocket_server.py
attached_assets/: Pasted-Absolutely-Here-s-a-detailed-project-prompt-for-building-a-fully-functional-AI-Voice-Assistan-1749061108250.txt
core/: __init__.py  advanced_task_executor.py  advanced_task_executor_backup.py  analytics_engine.py  attention.py  audio_bridge.py  bug_watcher.py  calendar_manager.py  curiosity.py  database.py  dev_agent.py  dynamic_app_discovery.py  emotional_intelligence.py  enhanced_thinking.py  fatigue.py  function_executor.py  (+33 more)
(+197 files in other folders)
