[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "psutil>=7.0.0",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "python-dotenv>=1.1.0",
    "pyttsx3>=2.98",
    "requests>=2.32.3",
    "speechrecognition>=3.14.3",
]
